WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229568
[iOS] Photo picker appears at incorrect locations when opened using a trackpad
https://bugs.webkit.org/show_bug.cgi?id=229568
Summary
[iOS] Photo picker appears at incorrect locations when opened using a trackpad
Aditya Keerthi
Reported
2021-08-26 09:32:05 PDT
Steps to reproduce 1. On an iPad with a trackpad, navigate to data:text/html,<input type=file> 2. Tap on the bottom left of the screen 3. Using the trackpad, click on the file input, then click "Photo Library" 4. Observe that the popover is presented on the bottom right of the screen
Attachments
Patch
(2.43 KB, patch)
2021-08-26 09:33 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2021-08-26 09:32:51 PDT
rdar://80268735
Aditya Keerthi
Comment 2
2021-08-26 09:33:37 PDT
Created
attachment 436526
[details]
Patch
Aditya Keerthi
Comment 3
2021-08-26 12:29:15 PDT
Comment on
attachment 436526
[details]
Patch Thanks for the review!
EWS
Comment 4
2021-08-26 12:33:44 PDT
Committed
r281646
(
241002@main
): <
https://commits.webkit.org/241002@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436526
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug